# gb-emu

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  mise.toml
.github/workflows/: ci.yml  release.yml
include/: gb_emu.h
src/: bus.rs  core.rs  cpu.rs  ffi.rs  interrupts.rs  joypad.rs  lib.rs  log.rs  memory.rs  ppu.rs  snapshot.rs  timer.rs  wasm.rs
src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs
src/cpu/: alu.rs  mod.rs  opcodes.rs
src/memory/: camera.rs  cgb.rs  mod.rs  rtc.rs
src/memory/cartridge/: camera.rs  mbc1.rs  mbc3.rs  mbc5.rs  mbc7.rs  mod.rs  none.rs
src/ppu/: cgb.rs  dmg.rs  mod.rs
