[package]
name = "gb-emu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
ios = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = true