[package]
name = "gb-emu"
version = "0.1.1"
edition = "2024"
description = "Game Boy Camera emulator core"
repository = "https://github.com/orkosinha/gb-emu"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]
ios = []

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = 3
lto = true
